:wrench: Genre dto as done